[package]
name = "astrobase-client"
version = "0.0.1"
authors = ["Vasily Kondratyev <wassily.kondratiev@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.40"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.64"
structopt = { version = "0.3.21", features = ["color"] }
tokio = { version = "1.5.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.25"
tracing-subscriber = "0.2.17"
