[package]
name = "astrobase-client"
version = "0.0.1"
authors = ["Vasily Kondratyev <wassily.kondratiev@gmail.com>"]
edition = "2018"

[[bin]]
name = "cli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.40"
prost = "0.7.0"
structopt = { version = "0.3.21", features = ["color"] }
tokio = { version = "1.5.0", features = ["rt-multi-thread"] }
tonic = "0.4.2"
tracing = "0.1.25"
tracing-subscriber = "0.2.17"

[build-dependencies]
tonic-build = "0.4.2"
