[package]
name = "astrobase-server"
version = "0.0.1"
authors = ["Vasily Kondratyev <wassily.kondratiev@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1.58"
file-lock = "1.1.20"
prost = "0.11.2"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
structopt = { version = "0.3.26", features = ["color"] }
thiserror = "1.0.37"
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.8.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[build-dependencies]
tonic-build = "0.8.2"

[features]
inmemory = []
persistent = []
default = ["inmemory"]
